# pokeRL

./: .gitignore  README.md  pokerl.drawio  pyproject.toml  requirements.in
.github/workflows/: build.yml  env.yml  mypy.yml  python-app.yml  ruff.yml  tools.yml
notebook/: DQN.ipynb  bench.ipynb  envs.ipynb  explore_memory_pokemon.ipynb  global_position.ipynb  maze_env.ipynb  other_gym.ipynb  random_pipeline.ipynb  ray_optim.ipynb  stable_baselines.ipynb  test_env.ipynb  test_nets.ipynb  torch_test.ipynb  train.ipynb  training_agent_baptiste.ipynb
pokerl/agent/: agentTemplate.py  random.py  randomAgent.py  tools.py  train.py
pokerl/agent/DQN/: DQN.py
pokerl/agent/PPO/: PPO.py
pokerl/agent/dreamerv3/: agent.py  behaviors.py  expl.py  jaxagent.py  jaxutils.py  nets.py  ninjax.py  train.py
pokerl/agent/epsilon_greedy_policy/: Statepsilon.py  idea.drawio  test_Statepsilon.py
pokerl/agent/own_dreamer/: pseudo_code.py  world_model.py
pokerl/agent/own_dreamer/nets/: decoder.py  image_decoder.py  image_encoder.py  image_encoder_decoder.py  mlp.py  reference.py  tools.py
pokerl/env/: __init__.py  main.py  pokemonblue.py  pokemonstate.py  pyboygym.py  settings.py  tool.py
pokerl/env/rewards/: basic_reward.py  basic_rewards.py  reward.py
pokerl/env/test/: test_basic_function.py  test_rewards.py
pokerl/env/wrapper/: basic_rewards.py
pokerl/env/wrappers/: __init__.py  action.py  info.py  observation.py  postprocessing.py  rewards.py  stop.py
pokerl/env/wrappers/test/: test_wrappers.py
pokerl/tools/: __init__.py  romhandler.py
pokerl/train/: test_training.py
runs/7cxs6l8i/PPO_1/: events.out.tfevents.1713739043.device-43.home.12487.0
runs/bqq6ea69/PPO_1/: events.out.tfevents.1713736230.device-43.home.73556.0
runs/f3zn7lw4/PPO_1/: events.out.tfevents.1713735298.device-43.home.60470.0
src/pokerl/: blueterface.py  gymterface.py  pyboyterface.py  settings.py
src/rl_model/: Q.py  agentTemplate.py  random.py  tools.py  train.py
src/rl_model/DQN/: model.py
src/rl_model/PPO/: PPO.py
src/rl_model/dreamerv3/: dists.py  nets.py  rssm.py
src/rl_model/own_dreamer/: pseudo_code.py
states/: game_start.state  starter_feu.state
