[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerl"
version = "0.0.1"
authors = [
    {name = "Jimmy Rogala", email = "rogala.jimmy@gmail.com"},
]
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.7, <3.11"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.scripts]
rom_handler = "pokerl.rom_handler:main"
play = "pokerl.blueterface:main"
