[tool.poetry]
name = "pokerl"
version = "0.0.1"
description = "A pokemon library for reinforcement learning"
authors = [
    "Jimmy Rogala",
    "Baptiste Pugnaire",
]
readme = "README.md"
packages = [{include = "pokerl"}]

[tool.poetry.dependencies]
python = "~3.10"
pyboy = "^1.6.11"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
torch = "^2.0.0"
torch-directml = {version = "^0.2.0.dev230426", platform = "win32"}
ray = {extras = ["default"], version = "^2.9.0"}
gymnasium = "^0.29.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"


[tool.poetry.scripts]
rom_handler = "pokerl.tools.romhandler:main"
play = "pokerl.env.pokemonblue:play"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
