[tool.poetry]
name = "pokerl"
version = "0.0.1"
description = "A pokemon library for reinforcement learning"
authors = [
    "Jimmy Rogala",
    "Baptiste Pugnaire",
]
readme = "README.md"
packages = [{include = "pokerl"}]

[tool.poetry.dependencies]
python = "~3.10"
pyboy = "^1.6.11"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
torch = "^2.0.0"
torch-directml = {version = "^0.2.0.dev230426", platform = "win32"}
ray = {extras = ["default"], version = "^2.9.0"}
gymnasium = {extras = ["other"], version = "^0.29.1"}
torchvision = "~0.15.1"
matplotlib = "^3.8.2"
ipympl = "^0.9.3"
tqdm = "^4.66.1"

[tool.poetry.scripts]
rom_handler = "pokerl.tools.romhandler:main"
play = "pokerl.env.pokemonblue:play"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
tensorboard = "^2.15.1"
mypy = "^1.8.0"
pysdl2 = "^0.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120

select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.mypy]
ignore_missing_imports = true